@@ -1,6 +1,9 @@
 Release 1.0.2 (Aug 05, 2010)
 ============================
 
+* #490: Fix cross-references to objects of types added by the
+  :func:`~.Sphinx.add_object_type` API function.
+
 * Allow breaking long signatures, continuing with backlash-escaped
   newlines.
 
